# claude-code-router-py

./: .gitignore  README.md  batch.py  chat_to_generate_adapter.py  client.py  config.json  config.py  converter.py  debug.py  main.py  server.py  test_router.py
.claude/: settings.local.json
claude-code-router-rs/: Cargo.toml
claude-code-router-rs/src/: client.rs  config.rs  converter.rs  main.rs  server.rs  streaming.rs  types.rs
