[package]
name = "ccr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
